<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_logs"
            android:title="@string/menu_logs" />
        <item
            android:id="@+id/nav_trends"
            android:title="@string/menu_trends_analysis" />
        <item
            android:id="@+id/nav_support"
            android:title="@string/menu_support" />


    </group>


</menu>
