<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.infyULabs.setting.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="#fff">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_black_36dp">


            <TableRow
                android:id="@+id/Relative1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:gravity="center"
                android:padding="7dp"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="0.75" />

                <ImageView
                    android:id="@+id/setting_action"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_weight=".2"
                    android:background="@drawable/small_logo"
                    android:padding="5dp">

                </ImageView>
            </TableRow>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/ll_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dip96"
            android:layout_height="@dimen/dip96"
            android:background="@color/gray"
            android:src="@drawable/small_logo" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Black" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_logo"
        android:layout_margin="10dp">

        <RelativeLayout
            android:id="@+id/rl_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dip8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/temperature"
                android:textColor="@color/Black" />

            <ToggleButton
                android:id="@+id/tb_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textOff="&#176;C"
                android:textOn="&#176;F" />

        </RelativeLayout>

        <View
            android:id="@+id/view_temp_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_below="@id/rl_temperature"
            android:background="@color/Black" />

        <RelativeLayout
            android:id="@+id/rl_freq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_temp_divider"
            android:paddingTop="@dimen/dip8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/spatial_freq"
                android:textColor="@color/Black" />

            <ToggleButton
                android:id="@+id/tb_spatial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textOff="Wavenumber"
                android:textOn="Wavelength" />

        </RelativeLayout>

        <View
            android:id="@+id/view_freq_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_below="@id/rl_freq"
            android:background="@color/Black" />

        <RelativeLayout
            android:id="@+id/rl_setNano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_freq_divider"
            android:paddingTop="@dimen/dip8">

            <Button
                android:id="@+id/btn_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/go" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/btn_set"
                android:text="@string/set_nano"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/tv_pref_nano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:visibility="invisible" />

        </RelativeLayout>

        <View
            android:id="@+id/view_set_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_below="@id/rl_setNano"
            android:background="@color/Black" />

        <RelativeLayout
            android:id="@+id/rl_clearNano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_setNano"
            android:paddingTop="@dimen/dip8">

            <Button
                android:id="@+id/btn_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/forget" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/btn_forget"
                android:text="@string/clear_nano"
                android:textColor="@color/Black" />

        </RelativeLayout>

        <View
            android:id="@+id/view_clear_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_below="@id/rl_clearNano"
            android:layout_marginBottom="@dimen/dip8"
            android:background="@color/Black" />
    </RelativeLayout>

</RelativeLayout>
