<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.infyULabs.nir.NewScanActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="#fff">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_black_36dp">


            <TableRow
                android:id="@+id/Relative1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:gravity="center"
                android:padding="7dp"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="0.75" />

                <ImageView
                    android:id="@+id/setting_action"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_weight=".2"
                    android:background="@drawable/small_logo"
                    android:padding="5dp">

                </ImageView>
            </TableRow>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginStart="@dimen/dip8"
        android:layout_marginEnd="@dimen/dip8"
        android:layout_weight="1">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/calProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="gone" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_graph_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/dip8"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/dip8">

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/dip8"
            android:background="@color/colorPrimaryDark"
            android:text="@string/scan"
            android:textColor="#ffffff" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btn_scan">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_os"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_saveOS"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/save_to_android"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <ToggleButton
                        android:id="@+id/btn_saveOS"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dip40"
                        android:checked="true"
                        android:textOff="No"
                        android:textOn="Yes" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px1"
                    android:layout_below="@id/ll_os"
                    android:background="#eeeeee" />

                <LinearLayout
                    android:id="@+id/ll_continuous"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dip40"
                    android:layout_below="@id/ll_os">

                    <TextView
                        android:id="@+id/tv_continuous"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cont_scan"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <ToggleButton
                        android:id="@+id/btn_continuous"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dip40"
                        android:textOff="No"
                        android:textOn="Yes" />

                </LinearLayout>

                <TextView
                    android:id="@+id/briText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_continuous"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:textColor="@color/Black"
                    android:textSize="20sp">

                </TextView>

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>
